Add Support gemini3 flash (Game V0.9-Beta2)
Switch default Gemini model to gemini-3-flash-preview and update all references, tests, and UI to match new supported models.
Add migration and normalization logic for Gemini model names in config manager. Improve Gemini provider's live API handling, response chunk extraction, and audio guardrails. Enhance voice session and voice manager logic for more robust settings and capability refresh.

Update build secrets to support environment variable fallback.

Bump Godot version in CI to 4.5.1 and improve build secrets injection for web and desktop exports.

--- a/1.Codebase/localization/gda1_translations.csv
+++ b/1.Codebase/localization/gda1_translations.csv
@@ -662,6 +662,8 @@ PAUSE_MENU_CHARACTERS,Characters,角色
 # Pause Menu,,
 PAUSE_TITLE,GAME PAUSED,遊戲暫停
 PAUSE_TOKEN_REPORT_TITLE,AI Token Usage Summary,AI Token 使用概況
+PAUSE_AI_MODEL,Active Model,當前模型
+PAUSE_AI_PROVIDER,AI Provider,AI 供應商
 BUTTERFLY_EXPLAIN_TITLE,How it Works,如何運作
 BUTTERFLY_EXPLAIN_BODY,The Butterfly Effect tracks your major decisions. Small choices can ripple through time and cause unexpected consequences later in the game. Watch your choices carefully!,蝴蝶效應會追蹤你做出的重大決定。小小的選擇會隨時間產生漣漪，並在遊戲後期引發意想不到的後果。請仔細留意你的每個選擇！
 BUTTERFLY_BTN_EXPLAIN,How it Works,如何運作
